# meta_core

./: CMakeLists.txt
include/: class_info.h  class_info_macro.h  template_tool.h
src/: class_info.cpp
src/test/: main.cpp
